--- a/hello.html
+++ b/hello.html
@@ -13,8 +13,8 @@
     <p id="text"><i style="color: rgb(250, 143, 232);">Random Task Generator</i><br>You could either do this or choose<br>from one the categories below.</p>
     <p id="title"></p>
     <div class="wrapper">
-        <div class="icon educational" id="educational">
-          <div class="tooltip">Educational</div>
+        <div class="icon education" id="education">
+          <div class="tooltip">Education</div>
           <span><i class="fab fa-solid fa-user-graduate"></i></span>
         </div>
         <div class="icon social"  id="social">
